# hotel-env

./: Dockerfile  README.md  check_yaml.py  grader.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
env/: __init__.py  environment.py  grader.py  models.py  openenv_env.py  tasks.py
server/: app.py
temp_env/test_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
temp_env/test_env/server/: Dockerfile  __init__.py  app.py  test_env_environment.py
