[project]
name = "hotel-env"
version = "0.1.0"
description = "Hotel Booking OpenEnv Environment"
authors = [{ name = "Vishal Patel" }]

dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env = "env.openenv_env:HotelEnvOpen"